--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,53 +25,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_games : 3\n",
+      "win : 2\n",
+      "\n",
+      "\t*** Round 1 ***\n",
+      "What are you playing ? stone\n",
+      "You played stone\n",
+      "The machine played stone\n",
+      "Game state : tie\n",
+      "\n",
+      "\t*** Round 2 ***\n",
+      "What are you playing ? stone\n",
+      "You played stone\n",
+      "The machine played scissors\n",
+      "Game state : you win\n",
+      "\n",
+      "\t*** Round 3 ***\n",
+      "What are you playing ? paper\n",
+      "You played paper\n",
+      "The machine played scissors\n",
+      "Game state : the machine wins\n",
+      "\n",
+      "Tie\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
     "\n",
+    "# random -> random.choice\n",
+    "# secrets -> secrets.choice\n",
+    "\n",
+    "import random\n",
+    "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
+    "l = ['stone', 'paper', 'scissors']\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
+    "max_games = 3\n",
+    "\n",
+    "print(\"max_games :\", max_games)\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
+    "win = int(max_games/2)+1\n",
+    "\n",
+    "print(\"win :\", win)\n",
     "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
+    "def machine():\n",
+    "    return random.choice(l)\n",
     "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
-    "\n",
+    "def joueur():\n",
+    "    while choix not in l:\n",
+    "        return input(\"What are you playing ? \")\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
+    "def combat(joueur, machine):\n",
+    "    var = 0\n",
+    "    if joueur==\"paper\" and machine==\"paper\" or joueur==\"stone\" and machine==\"stone\" or joueur==\"scissors\" and machine==\"scissors\":\n",
+    "        var = 0\n",
+    "    elif joueur==\"paper\" and machine==\"scissors\" or joueur==\"stone\" and machine==\"paper\" or joueur==\"scissors\" and machine==\"stone\":\n",
+    "        var = 1\n",
+    "    elif joueur==\"paper\" and machine==\"stone\" or joueur==\"stone\" and machine==\"scissors\" or joueur==\"scissors\" and machine==\"paper\":\n",
+    "        var = 2\n",
+    "    return var\n",
     "\n",
-    "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def state(joueur, machine, jeu):\n",
+    "    print(\"You played\", joueur)\n",
+    "    print(\"The machine played\", machine)\n",
+    "    if jeu == 0:\n",
+    "        print(\"Game state : tie\" )\n",
+    "    elif jeu == 1:\n",
+    "        print(\"Game state : the machine wins\" )\n",
+    "    elif jeu == 2:\n",
+    "        print(\"Game state : you win\" )\n",
+    "    \n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
-    "\n",
+    "points_machine = 0\n",
+    "points_joueur = 0\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
-    "\n",
-    "\n",
+    "for i in range(max_games):\n",
+    "    print(\"\\n\\t*** Round\", i+1, \"***\")\n",
+    "    j = joueur()\n",
+    "    m = machine()\n",
+    "    point = combat(j, m)\n",
+    "    if point == 1:\n",
+    "        points_machine += 1\n",
+    "    elif point == 2:\n",
+    "        points_joueur += 1\n",
+    "    state(j, m, point)\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "  "
+    "if  points_machine>points_joueur:\n",
+    "    print(\"\\nThe machine is the final winner\")\n",
+    "elif points_machine<points_joueur:\n",
+    "    print(\"\\nYou are the final winner\")\n",
+    "else:\n",
+    "    print(\"\\nTie\")\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "# Bonus: Stone, paper, scissors, lizard, spock\n",
@@ -171,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
