--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -129,13 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The actual daily displacement is: [10, 1, 13, 57, 24, 25]\n",
       "Days = 6\n",
       "The max displacement is 57\n",
       "The min displacement is 1\n",
@@ -179,6 +180,8 @@
     "for x in range(days_total):\n",
     "    actual_displacements.append(daily_displacement[x])\n",
     "    \n",
+    "print('The actual daily displacement is:', actual_displacements)\n",
+    "    \n",
     "\n",
     "# Print the result with print('Days =', days)\n",
     "print('Days =', days_total)\n",
@@ -207,6 +210,13 @@
     "print('The std of the actual displacement list is: %.2f' % std_displacement)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
