--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -274,15 +274,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The mean temperature throughout the day is: 58.83 \n",
-      "The mean temperature throughout the day is: 142.55 \n"
+      "The mean temperature ºC throughout the day is: 58.83 \n",
+      "The mean temperature ºF throughout the day is: 142.55 \n"
      ]
     }
    ],
@@ -290,10 +290,10 @@
     "# 3. Average of each of the lists (ºC and ºF). How they relate?\n",
     "\n",
     "mean_temp_C = sum(temp_C)/len(temp_C)\n",
-    "print('The mean temperature throughout the day is: %.2f ' % mean_temp_C)\n",
+    "print('The mean temperature ºC throughout the day is: %.2f ' % mean_temp_C)\n",
     "\n",
     "mean_temp_F = sum(temp_F)/len(temp_F)\n",
-    "print('The mean temperature throughout the day is: %.2f ' % mean_temp_F)\n",
+    "print('The mean temperature ºF throughout the day is: %.2f ' % mean_temp_F)\n",
     "\n",
     "#Comment\n",
     "\n",
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
