prework avec améliorations et corrections

--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is 4 stops\n"
+      "There are 4 stops\n"
      ]
     }
    ],
@@ -65,12 +65,12 @@
     "# 1. Calculate the number of stops.\n",
     "number_of_stops = len(stops)\n",
     "\n",
-    "print(\"There is\", number_of_stops, \"stops\")\n"
+    "print(\"There are\", number_of_stops, \"stops\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -79,12 +79,23 @@
      "text": [
       "[9, 8, 4, 10]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(0, (13, 4)), (1, (6, 7)), (2, (3, 7)), (3, (10, 4))]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# 2. Assign a variable a list whose elements are the number of \n",
     "# passengers in each stop: \n",
     "# Each item depends on the previous item in the list + in - out.\n",
+    "\n",
     "\n",
     "number_of_passengers = []\n",
     "nombre = 0\n",
@@ -94,7 +105,17 @@
     "    nombre -= stops[i][1]\n",
     "    number_of_passengers.append(nombre)\n",
     "\n",
-    "print(number_of_passengers)\n"
+    "print(number_of_passengers)\n",
+    "\n",
+    "\n",
+    "# for in_, out in liste :\n",
+    "\n",
+    "[(+in_-out) for in_, out in stops]\n",
+    "\n",
+    "[(i, stop) for i, stop in enumerate(stops)]\n",
+    "[i for i in enumerate(stops)]\n",
+    "\n",
+    "# enumerate nous donne l'index et sa valeur\n"
    ]
   },
   {
