--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,35 +25,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max_games : 3\n",
-      "win : 2\n",
+      "How many games do you want to play ? 4\n",
+      "max_games : 4\n",
+      "win : 3\n",
       "\n",
       "\t*** Round 1 ***\n",
-      "What are you playing ? stone\n",
-      "You played stone\n",
+      "What are you playing ? paper\n",
+      "You played paper\n",
       "The machine played stone\n",
-      "Game state : tie\n",
-      "\n",
-      "\t*** Round 2 ***\n",
-      "What are you playing ? stone\n",
-      "You played stone\n",
-      "The machine played scissors\n",
       "Game state : you win\n",
       "\n",
-      "\t*** Round 3 ***\n",
+      "\t*** Round 2 ***\n",
       "What are you playing ? paper\n",
       "You played paper\n",
       "The machine played scissors\n",
       "Game state : the machine wins\n",
       "\n",
-      "Tie\n"
+      "\t*** Round 3 ***\n",
+      "What are you playing ? paper\n",
+      "You played paper\n",
+      "The machine played stone\n",
+      "Game state : you win\n",
+      "\n",
+      "\t*** Round 4 ***\n",
+      "What are you playing ? paper\n",
+      "You played paper\n",
+      "The machine played stone\n",
+      "Game state : you win\n",
+      "\n",
+      "You are the final winner\n"
      ]
     }
    ],
@@ -70,7 +77,7 @@
     "l = ['stone', 'paper', 'scissors']\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
-    "max_games = 3\n",
+    "max_games = int(input(\"How many games do you want to play ? \"))\n",
     "\n",
     "print(\"max_games :\", max_games)\n",
     "\n",
@@ -89,8 +96,10 @@
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
     "def joueur():\n",
+    "    choix = \"\"\n",
     "    while choix not in l:\n",
-    "        return input(\"What are you playing ? \")\n",
+    "        choix = input(\"What are you playing ? \")\n",
+    "    return choix\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
