--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -132,14 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The closest point to the center is  [0, 2]\n"
+      "The closest point to the center is  [[0, 2], [0, -2]]\n"
      ]
     }
    ],
@@ -151,47 +153,55 @@
     "    return (x**2+y**2)**0.5\n",
     "\n",
     "closest_point = []\n",
-    "min_dist = 0.0\n",
+    "min_dist = distance(float(points[1][0]), float(points[1][1]))\n",
     "\n",
     "\n",
     "for i in range(0, len(points)):\n",
     "    dist = distance(float(points[i][0]), float(points[i][1]))\n",
-    "    if max_dist > dist:\n",
-    "        max_dist = dist\n",
-    "        closest_point = list(points[i])\n",
+    "    if dist <= min_dist:\n",
+    "        min_dist = dist\n",
+    "        closest_point.append(list(points[i]))\n",
     "    \n",
     "print(\"The closest point to the center is \", closest_point)\n",
     "\n",
-    "\n"
+    "\n",
+    "# amélioration : plusieurs points à égale distance\n",
+    "# vérifier les variables min_dist et max_dist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12 arrow(s) must be picked up in the forest\n"
+      "2 arrow(s) must be picked up in the forest\n"
      ]
     }
    ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
     "# must be picked up in the forest.\n",
+    "\"\"\"\n",
+    "points = [(4, 5), (-0, 2), (4, 7), (1, -3), (3, -2), (4, 5),\n",
+    "          (3, 2), (5, 7), (-5, 7), (2, 2), (-4, 5), (0, -2),\n",
+    "          (-4, 7), (-1, 3), (-3, 2), (-4, -5), (-3, 2),\n",
+    "          (5, 7), (5, 7), (2, 2), (9, 9), (-8, -9)]\n",
+    "\"\"\"\n",
     "\n",
-    "rayon = 9/2\n",
+    "rayon = 9\n",
     "forest = 0\n",
     "\n",
     "for i in range(0, len(points)):\n",
-    "    if points[i][0] > rayon or points[i][0] < -rayon:\n",
+    "    if distance(float(points[i][0]), float(points[i][1]))>= rayon:\n",
     "        forest += 1\n",
-    "    elif points[i][1] > rayon or points[i][1] < -rayon:#++\n",
-    "            forest += 1\n",
     "            \n",
-    "print(forest, \"arrow(s) must be picked up in the forest\")"
+    "print(forest, \"arrow(s) must be picked up in the forest\")\n",
+    "\n",
+    "# réutiliser distance"
    ]
   },
   {
@@ -207,6 +217,94 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# COURS\n",
+    "liste = [1, 2, 3, 4]\n",
+    "liste2 = [[1, 2, 3, 4], [1, 2, 3, 4], [1, 2, 3, 4]]\n",
+    "\n",
+    "nouvelle_liste = [x*2 for x in liste]\n",
+    "\n",
+    "print(nouvelle_liste)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3, 4], [1, 2, 3, 4], [1, 2, 3, 4]]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[y for y in x] for x in liste2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[2, (4, 5)], [3, (5, 7)], [2, (-3, 2)], [2, (2, 2)]]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reprise exo\n",
+    "\n",
+    "[[points.count(i), i] for i in set_points if points.count(i)>1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'stops' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-108f8919c8c6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# pour le nombre de passagers à chaque stop dans l'exo des bus\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0min_\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0min_\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0min_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstops\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'stops' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# pour le nombre de passagers à chaque stop dans l'exo des bus\n",
+    "\n",
+    "[(in_+in_-out) for in_, out in stops]"
+   ]
   },
   {
    "cell_type": "code",
