--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -101,33 +101,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The minimum temperature is: 0\n",
+      "The maximum temperature is: 90\n",
+      "Number of temperatures greater than 70C: 7 \t and these are [76, 80, 81, 80, 83, 90, 79]\n",
+      "Mean temperature throughout the day: 60.25\n",
+      "The original temperatures list: [33, 66, 65, 0, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+      "The modified temperatures list with the valeu estimated: [33, 66, 65, 60.25, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+      "Temperatures in Farenheit units: [91.4, 150.8, 149.0, 32.0, 138.2, 140.0, 143.60000000000002, 147.2, 158.0, 168.8, 176.0, 177.8, 176.0, 181.4, 194.0, 174.20000000000002, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n"
+     ]
+    }
+   ],
    "source": [
+    "import statistics\n",
+    "\n",
     "# assign a variable to the list of temperatures\n",
+    "temperatures_C = [33,66,65,0,59,60,62,64,70,76,80,81,80,83,90,79,61,53,50,49,53,48,45,39]\n",
     "\n",
     "# 1. Calculate the minimum of the list and print the value using print()\n",
-    "\n",
+    "print(\"The minimum temperature is:\",min(temperatures_C))\n",
     "\n",
     "# 2. Calculate the maximum of the list and print the value using print()\n",
-    "\n",
+    "print(\"The maximum temperature is:\",max(temperatures_C))\n",
     "\n",
     "# 3. Items in the list that are greater than 70ºC and print the result\n",
-    "\n",
+    "temperature_greater_70C = []\n",
+    "hours_greater_70C = []\n",
+    "for i in range (len(temperatures_C)):\n",
+    "    if temperatures_C[i] > 70:\n",
+    "        hours_greater_70C.append(i) #This is for future improvements\n",
+    "        temperature_greater_70C.append(temperatures_C[i])\n",
+    "print(\"Number of temperatures greater than 70C:\",len(temperature_greater_70C),\"\\t\",\"and these are\",temperature_greater_70C)\n",
     "\n",
     "# 4. Calculate the mean temperature throughout the day and print the result\n",
-    "\n",
+    "print(\"Mean temperature throughout the day:\",sum(temperatures_C)/len(temperatures_C))\n",
     "\n",
     "# 5.1 Solve the fault in the sensor by estimating a value\n",
-    "\n",
+    "mean_t = sum(temperatures_C)/len(temperatures_C)\n",
     "\n",
     "# 5.2 Update of the estimated value at 03:00 on the list\n",
-    "\n",
-    "\n",
+    "temperatures_C_estimated = []\n",
+    "for i in range(len(temperatures_C)):\n",
+    "    temperatures_C_estimated.append(temperatures_C[i])\n",
+    "temperatures_C_estimated[3] = mean_t\n",
+    "print(\"The original temperatures list:\",temperatures_C)\n",
+    "print(\"The modified temperatures list with the valeu estimated:\",temperatures_C_estimated)\n",
     "\n",
     "# Bonus: convert the list of ºC to ºFarenheit\n",
-    "\n"
+    "temperatures_F = []\n",
+    "for i in range (len(temperatures_C)):\n",
+    "    temperatures_F.append(temperatures_C[i]*1.8+32)\n",
+    "print(\"Temperatures in Farenheit units:\",temperatures_F)"
    ]
   },
   {
@@ -144,12 +174,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "We don not need change the cooling system so far\n"
+     ]
+    }
+   ],
    "source": [
     "# Print True or False depending on whether you would change the cooling system or not\n",
-    "\n"
+    "print(len(temperature_greater_70C) > 4)\n",
+    "for i in range(len(temperatures_C)):\n",
+    "    counter = 0\n",
+    "    if temperatures_C[i] > 80:\n",
+    "        counter += 1\n",
+    "print(counter > 0)\n",
+    "print(mean_t > 65)\n",
+    "\n",
+    "print(\"We don not need change the cooling system so far\")"
    ]
   },
   {
@@ -165,50 +214,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of temperatures greater than 70C: 7 \t and these are [76, 80, 81, 80, 83, 90, 79]\n",
+      "f [9, 10, 11, 12, 13, 14, 15]\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. We want the hours (not the temperatures) whose temperature exceeds 70ºC\n",
-    "\n"
+    "print(\"Number of temperatures greater than 70C:\",len(temperature_greater_70C),\"\\t\",\"and these are\",temperature_greater_70C)\n",
+    "print(\"f\",hours_greater_70C)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is more than four T greater than 70 in a row\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Condition that those hours are more than 4 consecutive and consecutive, not simply the sum of the whole set. Is this condition met?\n",
-    "\n"
+    "first_test_tC = []\n",
+    "second_test_tC = []\n",
+    "third_test_tC = []\n",
+    "fourth_test_tC = []\n",
+    "fifth_test_tC = []\n",
+    "\n",
+    "for i in range (len(temperature_greater_70C)):\n",
+    "    first_test_tC.append(temperature_greater_70C[i])\n",
+    "for y in range (1,len(temperature_greater_70C)):\n",
+    "    second_test_tC.append(temperature_greater_70C[y])\n",
+    "for z in range (2,len(temperature_greater_70C)):\n",
+    "    third_test_tC.append(temperature_greater_70C[z])\n",
+    "for w in range (3,len(temperature_greater_70C)):\n",
+    "    fourth_test_tC.append(temperature_greater_70C[w])\n",
+    "for x in range (4,len(temperature_greater_70C)):\n",
+    "    fifth_test_tC.append(temperature_greater_70C[x])\n",
+    "\n",
+    "#print(\"a\",first_test_tC)\n",
+    "#print(\"b\",second_test_tC)\n",
+    "#print(\"c\",third_test_tC)\n",
+    "#print(\"d\",fourth_test_tC)\n",
+    "#print(\"e\",fifth_test_tC)\n",
+    "\n",
+    "for q in range (len(fifth_test_tC)):\n",
+    "    counter = 0\n",
+    "    if (first_test_tC[q] > 70) & (second_test_tC[q] > 70) & (third_test_tC[q] > 70) & (fourth_test_tC[q] > 70) & (fifth_test_tC[q] > 70):\n",
+    "        counter += 1\n",
+    "    else:\n",
+    "        counter = 0\n",
+    "if counter > 0:\n",
+    "    print(\"There is more than four T greater than 70 in a row\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60.25\n",
+      "140.45\n",
+      "We can say that the relation between tC over tF is a half aprox: 0.42897828408686367\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the lists (ºC and ºF). How they relate?\n",
-    "\n"
+    "mean_t_F = sum(temperatures_F)/len(temperatures_F)\n",
+    "print(mean_t)\n",
+    "print(mean_t_F)\n",
+    "\n",
+    "print(\"We can say that the relation between tC over tF is a half aprox:\",mean_t/mean_t_F)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The standard deviation of temperature in C is: 19.700474503223873\n",
+      "The standard deviation of temperature in F is: 35.46085410580297\n",
+      "The relation between the two of them: 0.5555555555555556\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the lists. How they relate?\n",
-    "\n"
+    "print(\"The standard deviation of temperature in C is:\",statistics.stdev(temperatures_C))\n",
+    "print(\"The standard deviation of temperature in F is:\",statistics.stdev(temperatures_F))\n",
+    "print(\"The relation between the two of them:\",statistics.stdev(temperatures_C)/statistics.stdev(temperatures_F))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -227,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
