--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -32,61 +32,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# variables\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Calculate the number of stops.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
-    "# Each item depends on the previous item in the list + in - out.\n",
-    "\n"
+    "import statistics\n",
+    "\n",
+    "# variables\n",
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of stops that bus does: 9\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. Find the maximum occupation of the bus.\n",
-    "\n"
+    "# 1. Calculate the number of stops.\n",
+    "print(\"Number of stops that bus does:\",len(stops))\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The passengers has bus at each stop: [10, 13, 11, 10, 14, 10, 7, 5, 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
+    "# Each item depends on the previous item in the list + in - out.\n",
+    "passengers_stops = []\n",
+    "total_passengers_stops = []\n",
+    "for i in range(len(stops)):\n",
+    "    passengers_stops.append(stops[i][0]-stops[i][1])\n",
+    "    total_passengers_stops.append(sum(passengers_stops))\n",
+    "#print(passengers_stops)\n",
+    "print(\"The passengers has bus at each stop:\",total_passengers_stops)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The maximum occupation is: 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Find the maximum occupation of the bus.\n",
+    "print(\"The maximum occupation is:\",max(total_passengers_stops))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average occupation: 9.333333333333334\n",
+      "The standard deviation is: 3.391164991562634\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. Calculate the average occupation. And the standard deviation.\n",
+    "print(\"The average occupation:\",sum(total_passengers_stops)/len(total_passengers_stops))\n",
+    "print(\"The standard deviation is:\",statistics.stdev(total_passengers_stops))"
+   ]
   }
  ],
  "metadata": {
@@ -105,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
