--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -22,19 +22,38 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 11\n"
+     ]
+    }
+   ],
    "source": [
+    "import statistics\n",
+    "\n",
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
+    "well_height = 125\n",
+    "daily_advance = 30\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
+    "days = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
-    "\n",
-    "\n",
-    "# Print the result with print('Days =', days)\n"
+    "while accumulated_distance < well_height:\n",
+    "    days += 1\n",
+    "    accumulated_distance += daily_advance\n",
+    "    if accumulated_distance >= well_height:\n",
+    "        # Print the result with print('Days =', days)\n",
+    "        print('Days =',days)\n",
+    "    else:\n",
+    "        accumulated_distance -= night_retreat\n",
+    "    #print(accumulated_distance)"
    ]
   },
   {
@@ -71,39 +90,58 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 5\n",
+      "The maximum displacement in a day is: 77\n",
+      "The minimum displacement in a day is: 21\n",
+      "The speeds during the  5 is [30, 21, 33, 77, 44]\n",
+      "The average speed during this 5 days has been: 41.0\n",
+      "The standard deviation is: 21.737065119284157\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
+    "well_height = 125\n",
+    "daily_advance = [30,21,33,77,44,45,23,45,12,34,55]\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
-    "\n",
+    "days = 0\n",
+    "# Index to move the positions from the list daily_advance\n",
+    "i = 0\n",
+    "# List to save the daily values\n",
+    "lst = []\n",
     "# Write the code that solves the problem\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Print the result with print('Days =', days)\n",
-    "\n",
+    "while accumulated_distance < well_height:\n",
+    "    days += 1\n",
+    "    accumulated_distance += daily_advance[i]\n",
+    "    lst.append(daily_advance[i])\n",
+    "    i += 1\n",
+    "    if accumulated_distance >= well_height:\n",
+    "        # Print the result with print('Days =', days)\n",
+    "        print('Days =',days)\n",
+    "    else:\n",
+    "        accumulated_distance -= night_retreat\n",
     "\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
-    "\n",
+    "print(\"The maximum displacement in a day is:\",max(lst))\n",
+    "print(\"The minimum displacement in a day is:\",min(lst))\n",
     "\n",
     "\n",
     "# What is its average progress?\n",
-    "\n",
+    "print(\"The speeds during the \",days,\"is\",lst)\n",
+    "print(\"The average speed during this\",days,\"days has been:\",sum(lst)/len(lst))\n",
     "\n",
     "# What is the standard deviation of your displacement during the day?\n",
-    "\n"
+    "print(\"The standard deviation is:\",statistics.stdev(lst))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -122,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
